Add "additionalProperties: false" dynamically and refactor schema to re-use the common question fields
