# api/v1/src/models/Questionnaire.generated.ts
@@ -10,6 +10,15 @@
  */
 export type AnyQuestion = QuestionWithoutOptions | QuestionWithOptions | NumericQuestion;
 /**
+ * Represents a question. The answer is a choice of yes/no, text or date.
+ */
+export type QuestionWithoutOptions = CommonQuestionFields & {
+  /**
+   * Type of the question.
+   */
+  type: "boolean" | "date" | "text";
+};
+/**
  * Logic expression used to compute this variable. Defaults to true.
  */
 export type LogicExpression = LogicOperator | LogicVariable | LogicConstant;
@@ -29,9 +38,32 @@ export type LogicOperator =
   | LogicGreater
   | LogicLess;
 export type LogicConstant = number | string | boolean;
+/**
+ * Represents a question with predefined answers to select.
+ */
+export type QuestionWithOptions = CommonQuestionFields & {
+  /**
+   * Answer options for Select/Multiselect questions.
+   */
+  options?: Option[];
+  /**
+   * Type of the question.
+   */
+  type: "select" | "multiselect";
+};
+/**
+ * Represents a question with numeric answer.
+ */
+export type NumericQuestion = CommonQuestionFields & {
+  numericOptions?: NumericOption;
+  /**
+   * Type of the question.
+   */
+  type: "number";
+};
 
 /**
- * The questionaire.
+ * The questionnaire.
  */
 export interface Questionnaire {
   /**
@@ -62,7 +94,7 @@ export interface Questionnaire {
   version: string;
 }
 /**
- * Meta-Information for a questionaire.
+ * Meta-Information for a questionnaire.
  */
 export interface QuestionnaireMeta {
   author: string;
@@ -76,23 +108,23 @@ export interface QuestionnaireMeta {
    */
   experiationDate?: string;
   /**
-   * Language of this questionaire, as ISO 639-1 code.
+   * Language of this questionnaire, as ISO 639-1 code.
    * Note that further languages can be defined in external lookup files.
    */
   language: string;
   publisher?: string;
   /**
-   * Region restriction (e.g. regions in which this questionaire is valid) as list of ISO 3166 ids.
+   * Region restriction (e.g. regions in which this questionnaire is valid) as list of ISO 3166 ids.
    */
   regions?: string[];
   title: string;
 }
 /**
- * Represents a question. The answer is a choice of yes/no, text or date.
+ * Represents the common fields of every question.
  */
-export interface QuestionWithoutOptions {
+export interface CommonQuestionFields {
   /**
-   * Optional human-readable details or clarifiation about this question.
+   * Optional human-readable details or clarification about this question.
    */
   details?: string;
   enableWhen?: LogicExpression;
@@ -108,10 +140,6 @@ export interface QuestionWithoutOptions {
    * Human-readable question text, can be localized.
    */
   text: string;
-  /**
-   * Type of the question.
-   */
-  type: "boolean" | "date" | "text" | "multiselect" | "number" | "select";
 }
 export interface LogicIf {
   if: [LogicExpression, LogicExpression, LogicExpression];
@@ -159,36 +187,6 @@ export interface LogicVariable {
   var: string;
 }
 /**
- * Represents a question with predefined answers to select.
- */
-export interface QuestionWithOptions {
-  /**
-   * Optional human-readable details or clarifiation about this question.
-   */
-  details?: string;
-  enableWhen?: LogicExpression;
-  /**
-   * Unique id for referring this question in logic expressions.
-   */
-  id: string;
-  /**
-   * Boolean indicating whether the question is optional or not.
-   */
-  optional?: boolean;
-  /**
-   * Answer options for Select/Multiselect questions.
-   */
-  options?: Option[];
-  /**
-   * Human-readable question text, can be localized.
-   */
-  text: string;
-  /**
-   * Type of the question.
-   */
-  type: "select" | "multiselect";
-}
-/**
  * Option for multi-select questions.
  */
 export interface Option {
@@ -206,33 +204,6 @@ export interface Option {
    * Value used for evaluating logic expressions.
    */
   value: string;
-}
-/**
- * Represents a question with numeric answer.
- */
-export interface NumericQuestion {
-  /**
-   * Optional human-readable details or clarification about this question.
-   */
-  details?: string;
-  enableWhen?: LogicExpression;
-  /**
-   * Unique id for referring this question in logic expressions.
-   */
-  id: string;
-  numericOptions?: NumericOption;
-  /**
-   * Boolean indicating whether the question is optional or not.
-   */
-  optional?: boolean;
-  /**
-   * Human-readable question text, can be localized.
-   */
-  text: string;
-  /**
-   * Type of the question.
-   */
-  type: "number";
 }
 /**
  * Option for numeric questions.
@@ -257,7 +228,7 @@ export interface NumericOption {
   step?: number;
 }
 /**
- * Represents a result category. A category might yield exactly one or zero results at the end of the questionaire.
+ * Represents a result category. A category might yield exactly one or zero results at the end of the questionnaire.
  */
 export interface ResultCategory {
   /**
@@ -275,7 +246,8 @@ export interface ResultCategory {
 }
 /**
  * Represents a single result.
- * The value of the logic expression yielding true or false. The first result in the result category yielding true will be\nused as result. If no result evaluates to true, no result is shown for this category.
+ * The value of the logic expression yielding true or false. The first result in the result category yielding true will be
+ * used as result. If no result evaluates to true, no result is shown for this category.
  */
 export interface Result {
   /**
