# openapi/components/schemas/questionnaire.json
@@ -1,7 +1,6 @@
 {
   "title": "Questionnaire",
-  "additionalProperties": false,
-  "description": "The questionaire.",
+  "description": "The questionnaire.",
   "properties": {
     "id": {
       "description": "Unique, assigned identifier. Machine friendly.",
@@ -51,8 +50,37 @@
   ],
   "type": "object",
   "definitions": {
+    "QuestionBase": {
+      "description": "Represents the common fields of every question.",
+      "properties": {
+        "details": {
+          "description": "Optional human-readable details or clarification about this question.",
+          "type": "string"
+        },
+        "enableWhen": {
+          "$ref": "#/definitions/LogicExpression"
+        },
+        "id": {
+          "description": "Unique id for referring this question in logic expressions.",
+          "type": "string"
+        },
+        "optional": {
+          "description": "Boolean indicating whether the question is optional or not.",
+          "type": "boolean"
+        },
+        "text": {
+          "description": "Human-readable question text, can be localized.",
+          "type": "string"
+        }
+      },
+      "required": [
+        "id",
+        "text"
+      ],
+      "title": "Common question fields",
+      "type": "object"
+    },
     "NumericOption": {
-      "additionalProperties": false,
       "description": "Option for numeric questions.\nAnswer options for Select/Multiselect questions.",
       "properties": {
         "defaultValue": {
@@ -75,43 +103,33 @@
       "type": "object"
     },
     "NumericQuestion": {
-      "additionalProperties": false,
-      "description": "Represents a question with numeric answer.",
-      "properties": {
-        "details": {
-          "description": "Optional human-readable details or clarification about this question.",
-          "type": "string"
-        },
-        "enableWhen": {
-          "$ref": "#/definitions/LogicExpression"
-        },
-        "id": {
-          "description": "Unique id for referring this question in logic expressions.",
-          "type": "string"
-        },
-        "numericOptions": {
-          "$ref": "#/definitions/NumericOption"
-        },
-        "optional": {
-          "description": "Boolean indicating whether the question is optional or not.",
-          "type": "boolean"
-        },
-        "text": {
-          "description": "Human-readable question text, can be localized.",
-          "type": "string"
-        },
-        "type": {
-          "description": "Type of the question.",
-          "enum": ["number"],
-          "type": "string"
-        }
-      },
-      "required": ["id", "text", "type"],
       "title": "Numeric question",
-      "type": "object"
+      "type": "object",
+      "description": "Represents a question with numeric answer.",
+      "allOf": [
+        {
+          "$ref": "#/definitions/QuestionBase"
+        },
+        {
+          "properties": {
+            "numericOptions": {
+              "$ref": "#/definitions/NumericOption"
+            },
+            "type": {
+              "description": "Type of the question.",
+              "enum": [
+                "number"
+              ],
+              "type": "string"
+            }
+          },
+          "required": [
+            "type"
+          ]
+        }
+      ]
     },
     "Option": {
-      "additionalProperties": false,
       "description": "Option for multi-select questions.",
       "properties": {
         "asQuestion": {
@@ -127,7 +145,10 @@
           "type": "string"
         }
       },
-      "required": ["text", "value"],
+      "required": [
+        "text",
+        "value"
+      ],
       "type": "object"
     },
     "Question": {
@@ -147,96 +168,65 @@
     },
     "QuestionWithOptions": {
       "title": "QuestionWithOptions",
-      "additionalProperties": false,
       "description": "Represents a question with predefined answers to select.",
-      "properties": {
-        "details": {
-          "description": "Optional human-readable details or clarifiation about this question.",
-          "type": "string"
+      "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/QuestionBase"
         },
-        "enableWhen": {
-          "$ref": "#/definitions/LogicExpression"
-        },
-        "id": {
-          "description": "Unique id for referring this question in logic expressions.",
-          "type": "string"
-        },
-        "optional": {
-          "description": "Boolean indicating whether the question is optional or not.",
-          "type": "boolean"
-        },
-        "options": {
-          "description": "Answer options for Select/Multiselect questions.",
-          "items": {
-            "$ref": "#/definitions/Option"
-          },
-          "type": "array"
-        },
-        "text": {
-          "description": "Human-readable question text, can be localized.",
-          "type": "string"
-        },
-        "type": {
-          "anyOf": [
-            {
-              "enum": ["select"],
-              "type": "string"
+        {
+          "properties": {
+            "options": {
+              "description": "Answer options for Select/Multiselect questions.",
+              "items": {
+                "$ref": "#/definitions/Option"
+              },
+              "type": "array"
             },
-            {
-              "enum": ["multiselect"],
-              "type": "string"
+            "type": {
+              "enum": [
+                "select",
+                "multiselect"
+              ],
+              "type": "string",
+              "description": "Type of the question."
             }
-          ],
-          "description": "Type of the question."
+          },
+          "required": [
+            "type"
+          ]
         }
-      },
-      "required": ["id", "text", "type"],
-      "type": "object"
+      ]
     },
     "QuestionWithoutOptions": {
       "title": "QuestionWithoutOptions",
-      "additionalProperties": false,
       "description": "Represents a question. The answer is a choice of yes/no, text or date.",
-      "properties": {
-        "details": {
-          "description": "Optional human-readable details or clarifiation about this question.",
-          "type": "string"
+      "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/QuestionBase"
         },
-        "enableWhen": {
-          "$ref": "#/definitions/LogicExpression"
-        },
-        "id": {
-          "description": "Unique id for referring this question in logic expressions.",
-          "type": "string"
-        },
-        "optional": {
-          "description": "Boolean indicating whether the question is optional or not.",
-          "type": "boolean"
-        },
-        "text": {
-          "description": "Human-readable question text, can be localized.",
-          "type": "string"
-        },
-        "type": {
-          "type": "string",
-          "enum": [
-            "boolean",
-            "date",
-            "text",
-            "multiselect",
-            "number",
-            "select"
-          ],
-          "description": "Type of the question."
+        {
+          "properties": {
+            "type": {
+              "type": "string",
+              "enum": [
+                "boolean",
+                "date",
+                "text"
+              ],
+              "description": "Type of the question."
+            }
+          },
+          "required": [
+            "type"
+          ]
         }
-      },
-      "required": ["id", "text", "type"],
-      "type": "object"
+      ]
     },
     "QuestionnaireMeta": {
       "title": "QuestionnaireMeta",
-      "additionalProperties": false,
-      "description": "Meta-Information for a questionaire.",
+      "description": "Meta-Information for a questionnaire.",
       "properties": {
         "author": {
           "type": "string"
@@ -253,14 +243,14 @@
           "type": "string"
         },
         "language": {
-          "description": "Language of this questionaire, as ISO 639-1 code.\nNote that further languages can be defined in external lookup files.",
+          "description": "Language of this questionnaire, as ISO 639-1 code.\nNote that further languages can be defined in external lookup files.",
           "type": "string"
         },
         "publisher": {
           "type": "string"
         },
         "regions": {
-          "description": "Region restriction (e.g. regions in which this questionaire is valid) as list of ISO 3166 ids.",
+          "description": "Region restriction (e.g. regions in which this questionnaire is valid) as list of ISO 3166 ids.",
           "items": {
             "type": "string"
           },
@@ -270,13 +260,17 @@
           "type": "string"
         }
       },
-      "required": ["title", "author", "language", "creationDate"],
+      "required": [
+        "title",
+        "author",
+        "language",
+        "creationDate"
+      ],
       "type": "object"
     },
     "Result": {
       "title": "Result",
-      "additionalProperties": false,
-      "description": "Represents a single result.\nThe value of the logic expression yielding true or false. The first result in the result category yielding true will be\\nused as result. If no result evaluates to true, no result is shown for this category.",
+      "description": "Represents a single result.\nThe value of the logic expression yielding true or false. The first result in the result category yielding true will be\nused as result. If no result evaluates to true, no result is shown for this category.",
       "properties": {
         "id": {
           "description": "A unique identifier for this result.",
@@ -290,13 +284,16 @@
           "$ref": "#/definitions/LogicExpression"
         }
       },
-      "required": ["id", "text", "value"],
+      "required": [
+        "id",
+        "text",
+        "value"
+      ],
       "type": "object"
     },
     "ResultCategory": {
       "title": "ResultCategory",
-      "additionalProperties": false,
-      "description": "Represents a result category. A category might yield exactly one or zero results at the end of the questionaire.",
+      "description": "Represents a result category. A category might yield exactly one or zero results at the end of the questionnaire.",
       "properties": {
         "description": {
           "description": "A human readable description for the result category. Can be localized.",
@@ -314,11 +311,14 @@
           "type": "array"
         }
       },
-      "required": ["id", "description", "results"],
+      "required": [
+        "id",
+        "description",
+        "results"
+      ],
       "type": "object"
     },
     "Variable": {
-      "additionalProperties": false,
       "description": "Represents a variable which is computed from the given answers or other variables.",
       "type": "object",
       "properties": {
@@ -330,10 +330,12 @@
           "$ref": "#/definitions/LogicExpression"
         }
       },
-      "required": ["id", "value"]
+      "required": [
+        "id",
+        "value"
+      ]
     },
     "LogicAnd": {
-      "additionalProperties": false,
       "properties": {
         "and": {
           "items": {
@@ -342,7 +344,9 @@
           "type": "array"
         }
       },
-      "required": ["and"],
+      "required": [
+        "and"
+      ],
       "title": "LogicAnd",
       "type": "object"
     },
@@ -360,7 +364,6 @@
       ]
     },
     "LogicEquals": {
-      "additionalProperties": false,
       "properties": {
         "==": {
           "items": {
@@ -371,7 +374,9 @@
           "type": "array"
         }
       },
-      "required": ["=="],
+      "required": [
+        "=="
+      ],
       "title": "LogicEquals",
       "type": "object"
     },
@@ -390,7 +395,6 @@
       "description": "Logic expression used to compute this variable. Defaults to true."
     },
     "LogicGreater": {
-      "additionalProperties": false,
       "properties": {
         ">": {
           "items": {
@@ -401,12 +405,13 @@
           "type": "array"
         }
       },
-      "required": [">"],
+      "required": [
+        ">"
+      ],
       "title": "LogicGreater",
       "type": "object"
     },
     "LogicGreaterEqual": {
-      "additionalProperties": false,
       "properties": {
         ">=": {
           "items": {
@@ -417,12 +422,13 @@
           "type": "array"
         }
       },
-      "required": [">="],
+      "required": [
+        ">="
+      ],
       "title": "LogicGreaterEqual",
       "type": "object"
     },
     "LogicIf": {
-      "additionalProperties": false,
       "properties": {
         "if": {
           "items": {
@@ -433,12 +439,13 @@
           "type": "array"
         }
       },
-      "required": ["if"],
+      "required": [
+        "if"
+      ],
       "title": "LogicIf",
       "type": "object"
     },
     "LogicIn": {
-      "additionalProperties": false,
       "properties": {
         "in": {
           "items": {
@@ -459,12 +466,13 @@
           "type": "array"
         }
       },
-      "required": ["in"],
+      "required": [
+        "in"
+      ],
       "title": "LogicIn",
       "type": "object"
     },
     "LogicLess": {
-      "additionalProperties": false,
       "properties": {
         "<": {
           "items": {
@@ -475,12 +483,13 @@
           "type": "array"
         }
       },
-      "required": ["<"],
+      "required": [
+        "<"
+      ],
       "title": "LogicLess",
       "type": "object"
     },
     "LogicLessEqual": {
-      "additionalProperties": false,
       "properties": {
         "<=": {
           "items": {
@@ -491,12 +500,13 @@
           "type": "array"
         }
       },
-      "required": ["<="],
+      "required": [
+        "<="
+      ],
       "title": "LogicLessEqual",
       "type": "object"
     },
     "LogicMinus": {
-      "additionalProperties": false,
       "properties": {
         "-": {
           "items": {
@@ -507,12 +517,13 @@
           "type": "array"
         }
       },
-      "required": ["-"],
+      "required": [
+        "-"
+      ],
       "title": "LogicMinus",
       "type": "object"
     },
     "LogicNot": {
-      "additionalProperties": false,
       "properties": {
         "!": {
           "anyOf": [
@@ -528,7 +539,9 @@
           ]
         }
       },
-      "required": ["!"],
+      "required": [
+        "!"
+      ],
       "title": "LogicNot",
       "type": "object"
     },
@@ -579,7 +592,6 @@
       ]
     },
     "LogicOr": {
-      "additionalProperties": false,
       "properties": {
         "or": {
           "items": {
@@ -588,12 +600,13 @@
           "type": "array"
         }
       },
-      "required": ["or"],
+      "required": [
+        "or"
+      ],
       "title": "LogicOr",
       "type": "object"
     },
     "LogicPlus": {
-      "additionalProperties": false,
       "properties": {
         "+": {
           "items": {
@@ -604,12 +617,13 @@
           "type": "array"
         }
       },
-      "required": ["+"],
+      "required": [
+        "+"
+      ],
       "title": "LogicPlus",
       "type": "object"
     },
     "LogicReduce": {
-      "additionalProperties": false,
       "properties": {
         "reduce": {
           "items": {
@@ -620,12 +634,13 @@
           "type": "array"
         }
       },
-      "required": ["reduce"],
+      "required": [
+        "reduce"
+      ],
       "title": "LogicReduce",
       "type": "object"
     },
     "LogicSome": {
-      "additionalProperties": false,
       "properties": {
         "some": {
           "items": {
@@ -636,18 +651,21 @@
           "type": "array"
         }
       },
-      "required": ["some"],
+      "required": [
+        "some"
+      ],
       "title": "LogicSome",
       "type": "object"
     },
     "LogicVariable": {
-      "additionalProperties": false,
       "properties": {
         "var": {
           "type": "string"
         }
       },
-      "required": ["var"],
+      "required": [
+        "var"
+      ],
       "type": "object"
     }
   }
